fix : 선준님 피드백 반영  - toList() 수정  - repository.save 삭제 (수정부분)